@@ -30,11 +30,6 @@ struct ctest_jmp_wrapper {
 
 /** Starts a new test.
  * 
- * You must call ctest_start before making any assertions.
- * It's fine to call subroutines that themselves may make assertions.
- * You just need to ensure that somehow, up the call chain,
- * ctest_start has been called.
- * 
  * This call nests just fine.  A test failure always unwinds to the
  * most recent test_start call.  Therefore, if you have a lengthly
  * test and don't want a failure in the middle of it to bail all the
@@ -75,9 +70,9 @@ struct ctest_jmp_wrapper {
  * Mostly it just increments the numer of assertions counter
  * and prints the assertion if verbose is enabled.
  * 
- * You must eventually call either ctest_assert_succeeded()
- * or ctest_assert_failed() before the next 
- * ctest_assert_prepare() or ctest_start().
+ * You must make sure that ctest_assert_succeeded() or ctest_assert_failed()
+ * will be called before ctest_assert_prepare() or ctest_start() can possibly
+ * be called.
  */
 
 void ctest_assert_prepare(const char *file, int line, const char *func, const char *assertion);
@@ -85,32 +80,20 @@ void ctest_assert_prepare(const char *file, int line, const char *func, const ch
 
 /** Causes the current assertion to fail.
  *
- * This function may only be called within a ctest_start() block.
- * Also, you must have previously called ctest_assert_prepare().
- *
- * If none of the built-in Assert macros fit your fancy, you can do the
- * check on your own and call ctest_fail in the event that it fails.
- * 
- * Example:
- * 
- * <pre>
- * if(my_error) {
- *    ctest_fail(__FILE__, __LINE__, __func__, "Error Message %d", 1);
- * }
- * </pre>
- *
- * But, really, it's easier just to call the Fail() macro.
+ * You must have previously called ctest_assert_prepare().
+ * Pass the message that should be printed as a printf format string.
  */
 
 void ctest_assert_failed(const char *msg, ...);
 
 
-/** Causes the current assertion to succeed.
+/** Causes the current assertion to finish with success.
  * 
- * You must first call ctest_assert_prepare().
+ * You must have previously called ctest_assert_prepare().
  */
 
 void ctest_assert_succeeded();
+
 
 // The following routines are not meant to be called directly; they are used
 // by the mutest_start() macro and subject to change.
