@@ -23,6 +23,12 @@
 
 void run_ctest_unit_tests()
 {
+	// Ensure that we can hit asserts without first calling ctest_start.
+//	AssertEQ(1,1);
+
+	// TODO: write a test to fork and make sure that a failing
+	// assert causes the app to exit immediately.
+
 	ctest_test_assert_flavor();
 }
 
